# headless-ida-mcp-server

./: .env_example  .gitignore  README.md  langgraph.json  pyproject.toml
src/headless_ida_graph/: __init__.py  configuration.py  graph.py  state.py  utils.py
src/headless_ida_mcp_server/: __init__.py  helper.py  server.py
test/heap/: main  main.c
test/stack/: main  main.c
